02-kubernetes/12-ingress-controller/ingress-com-default-backend.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-path
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  labels:
    name: ingress-path
spec:
  ingressClassName: nginx
  rules:
  - host:
    http:
      paths:
      - pathType: Prefix
        path: "/blue"
        backend:
          service:
            name: web-blue
            port: 
              number: 80
      - pathType: Prefix
        path: "/green"
        backend:
          service:
            name: web-green
            port: 
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-default
  labels:
    name: ingress-default
spec:
  ingressClassName: nginx
  defaultBackend:
    service:
      name: nginx
      port:
        number: 80
